--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -76,6 +76,7 @@ jobs:
       - run: python $env:RUNNER -q --jerry-tests
       - run: python $env:RUNNER -q --unittests
       - run: python $env:RUNNER -q --buildoption-test
+      - run: python $env:RUNNER -q --jerry-debugger
 
   Win_x86-64_Tests_Debug:
     runs-on: windows-latest
@@ -84,6 +85,7 @@ jobs:
       - run: python $env:RUNNER -q --jerry-tests --build-debug
       - run: python $env:RUNNER -q --unittests --build-debug
       - run: python $env:RUNNER -q --buildoption-test --build-debug
+      - run: python $env:RUNNER -q --jerry-debugger --build-debug
 
   OSX_x86-64_Build_Correctness_Unit_Tests:
     runs-on: macos-13
@@ -94,6 +96,7 @@ jobs:
           python-version: '>=3.6'
       - run: $RUNNER -q --jerry-tests
       - run: $RUNNER -q --unittests
+      - run: $RUNNER -q --jerry-debugger
 
   OSX_x86-64_Build_Correctness_Unit_Tests_Debug:
     runs-on: macos-13
@@ -104,6 +107,7 @@ jobs:
           python-version: '>=3.6'
       - run: $RUNNER -q --jerry-tests --build-debug
       - run: $RUNNER -q --unittests --build-debug
+      - run: $RUNNER -q --jerry-debugger --build-debug
 
   Linux_x86-64_Build_Option_Tests:
     runs-on: ubuntu-latest
